--- a/index.html
+++ b/index.html
@@ -20,45 +20,94 @@
       }
       body {
         font-family: "Open Sans", sans-serif;
-      }
-      h1,
-      .navbar-brand {
-        font-family: "Montserrat", sans-serif;
+        margin: 0;
+        padding: 0;
       }
 
+      /* Navbar Fix: Ensuring links are visible */
       .navbar-custom {
         background-color: var(--brand-blue);
-        padding: 10px 0;
+        padding: 8px 0;
+      }
+      .navbar-dark .navbar-nav .nav-link {
+        color: rgba(255, 255, 255, 0.9) !important;
+        font-weight: 600;
       }
 
-      .hero {
-        /* This dark overlay prevents the text from looking messy over the image */
-        background:
-          linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-          url("images/hero-bg.png");
-        background-size: cover;
-        background-position: center;
-        min-height: 85vh;
+      /* Hero Section Setup */
+      .hero-section {
+        position: relative;
+        width: 100%;
+        background: url("images/hero-bg.png") no-repeat center top;
+        background-size: contain;
+        aspect-ratio: 1000 / 667;
+      }
+
+      /* MOVING BUTTONS HIGHER: Now at 42% to be safely above heads */
+      .button-group {
+        position: absolute;
+        top: 42%;
+        left: 24%;
         display: flex;
-        align-items: center;
-        color: white;
-        text-align: center;
+        gap: 15px;
       }
 
-      .btn-success {
-        background-color: var(--brand-green);
-        border: none;
-        padding: 12px 30px;
+      .btn-saarathi {
+        padding: 8px 24px;
         border-radius: 50px;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 13px;
+        transition: 0.3s;
+        text-decoration: none;
+        display: inline-block;
       }
-      .btn-outline-light {
-        border-radius: 50px;
-        padding: 12px 30px;
+
+      .btn-green {
+        background-color: var(--brand-green);
+        color: white;
+        border: 2px solid var(--brand-green);
+      }
+      .btn-outline {
+        background-color: white;
+        color: var(--brand-blue);
+        border: 2px solid var(--brand-blue);
+      }
+
+      /* Intro Section Styling */
+      .quote-sidebar {
+        border-left: 5px solid var(--brand-green);
+        padding: 20px;
+        background: #f8f9fa;
+        border-radius: 0 15px 15px 0;
+      }
+
+      /* Fix for mobile navigation and button centering */
+      @media (max-width: 991px) {
+        .button-group {
+          top: 38%;
+          left: 20%;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .hero-section {
+          background-size: cover;
+          aspect-ratio: auto;
+          min-height: 300px;
+        }
+        .button-group {
+          top: 50%;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 100%;
+          justify-content: center;
+        }
       }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom shadow-sm">
       <div class="container">
         <a
           class="navbar-brand d-flex align-items-center fw-bold"
@@ -67,21 +116,23 @@
           <img
             src="images/logo.png"
             alt="Logo"
-            width="45"
-            height="45"
-            class="me-2 rounded shadow-sm"
+            width="40"
+            height="40"
+            class="me-2 rounded"
           />
           SAARATHI
         </a>
+
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navMenu"
+          data-bs-target="#navbarNav"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navMenu">
+
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Home</a>
@@ -96,11 +147,8 @@
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
               <a
-                class="btn btn-light ms-lg-3 fw-bold text-primary px-4"
+                class="btn btn-light ms-lg-3 fw-bold text-primary px-4 rounded-pill shadow-sm"
                 href="donate.html"
                 >Donate</a
               >
@@ -110,30 +158,52 @@
       </div>
     </nav>
 
-    <header class="hero">
-      <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h1 class="display-3 fw-bold mb-4">
-            Education is the Foundation for Change
-          </h1>
-          <p class="lead mb-5">
-            Empowering government school children and women for a brighter,
-            sustainable future.
-          </p>
-          <div class="d-flex justify-content-center gap-3">
-            <a href="donate.html" class="btn btn-success btn-lg shadow"
-              >Support Us</a
-            >
-            <a href="about.html" class="btn btn-outline-light btn-lg"
-              >Our Story</a
-            >
+    <div class="hero-section">
+      <div class="button-group">
+        <a href="donate.html" class="btn-saarathi btn-green shadow-sm"
+          >Support Us</a
+        >
+        <a href="#intro" class="btn-saarathi btn-outline shadow-sm"
+          >Learn More</a
+        >
+      </div>
+    </div>
+
+    <section id="intro" class="py-5 bg-white">
+      <div class="container py-3">
+        <div class="row g-5">
+          <div class="col-lg-8">
+            <h2 class="fw-bold mb-4" style="color: var(--brand-blue)">
+              Who We Are
+            </h2>
+            <p class="lead">
+              Saarathi is a community-driven non-profit organization dedicated
+              to supporting the education and holistic development of rural
+              students in Karnataka.
+            </p>
+            <p class="text-muted">
+              Working closely with government schools, we bridge educational
+              gaps by providing essential supplies and digital exposure. We
+              believe every child deserves access to quality learning,
+              regardless of their background.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <div class="quote-sidebar shadow-sm">
+              <p class="h5 fst-italic mb-0">
+                “We don’t just support education—we build confidence, choices,
+                and hope.”
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </header>
+    </section>
 
     <footer class="bg-dark text-white py-4 text-center">
-      <p class="mb-0">© 2026 SAARATHI NGO | Empowering Communities</p>
+      <p class="mb-0 small">
+        © 2026 SAARATHI NGO | Building Confidence, Choices, and Hope
+      </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
